--- a/src/components/Units/identity.scss
+++ b/src/components/Units/identity.scss
@@ -34,9 +34,10 @@
 
 .UnitFormInput__SingleFile{
   display: flex;
+  flex-direction: row;
   width: 100%;
-  justify-content: space-between;
-  align-items: start;
+  justify-content: space-evenly;
+  align-items: center;
   span {
     margin: 0;
     padding-bottom: 4px;
