--- a/src/components/acctec/scan.scss
+++ b/src/components/acctec/scan.scss
@@ -1,6 +1,9 @@
 .scan_container {
     display: grid;
-    height: 100%;
     justify-content: center;
     align-items: center;
+    justify-self: center;
+    align-self: center;
+    width: 100%;
+    margin-top: 30vh;
 }
