--- a/src/styles/AcctecAdmin.module.scss
+++ b/src/styles/AcctecAdmin.module.scss
@@ -1,7 +1,60 @@
+@import "../styles/variables.scss";
+
 .modal_form{
     display: block;
 }
 
 .padding{
     padding: 0px 0px 0px 0px;
+}
+
+// Mid sized
+.top_container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+    grid-template-areas: "top_left top_right" "bottom bottom";
+    justify-content: space-around;
+
+    :nth-child(1){
+        grid-area: top_left;
+        margin: 0;
+    }
+    :nth-child(3){
+        grid-area: top_right;
+        margin: 0;
+
+    }
+    :nth-child(2){
+        grid-area: bottom;
+    }
+    gap: 1em;
+}
+
+// Small sized
+@media only screen and (max-width: map-get($breakpoints, md)) {
+    .top_container{
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto;
+        grid-template-areas: "top_left" "top_right" " bottom";
+
+        :nth-child(2){
+            max-width: map-get($breakpoints, sm);
+        }
+    }
+}
+
+// Max sized
+@media only screen and (min-width: map-get($breakpoints, lg)) {
+    .top_container{
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr 3fr 1fr;
+        grid-template-areas: "top_left bottom top_right";
+        gap: 2em;
+        margin-bottom: 2em;
+
+        :nth-child(2){
+            max-width: map-get($breakpoints, lg);
+        }
+    }
 }
