--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -35,4 +35,12 @@ $palette: (
         "dark": #d32f2f,
         "contrastText": #fff
     ),
-)
+);
+
+$breakpoints: (
+    "xs": 0px,
+    "sm": 600px,
+    "md": 960px,
+    "lg": 1280px,
+    "xl": 1536px,
+);
